# Programmazione_E_Calcolo_Scientifico_2026

./: primo_file_github
esercitazione1/: .gitignore  CMakeLists.txt  argc_argv.cpp  media_temperature.cpp
esercitazione2/: .gitignore  CMakeLists.txt  es1_memoria_oggetti.cpp  es2_algoritmi.cpp
esercitazione3/: .gitignore  CMakeLists.txt  rational.hpp  rational_test.cpp
esercitazione4/: CMakeLists.txt  measure_sorts.cpp  sorts.h  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
